2000-09-16  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Improved conversation rendering.

2000-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc (Projectile_effect): Missile eggs pretty-much done.

2000-09-12  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Load 8x8 tiles (no save). Still crashes on some 
	shapes (fonts???)
	* data/black_gate.shp, data/serpent_isle.shp: Menu entries for the two
	games
	* data/Makefile.am: add above to build

2000-09-09  Tristan Tarrant  <nadir@users.sourceforge.net>

	* Makefile.am: Add EXULT_DATADIR to the defines
	* Makefile.win32: Try to do the same for Win32
	* exult.cc: default directory for <DATA> files is now EXULT_DATADIR
	* exult.spec.in: Install data files in the appropriate place,
	learnt how a spec file actually works :-)
	* data/Makefile.am: fiddle with rules to install exult.flx in the
	correct place, and get rpm -tb working

2000-09-09  Jeff Freedman  <jeff@amy.nerble.net>

	* Light spells (glimmer, etc.) work now.
	* gamewin.cc: Set palette for dungeons, also lighten palette for
	gump mode.
	* Set dimensions for ship's hold gump.
	* objs.cc (Chunk_object_list): Dungeon rendering works, except
	palette change still to be implemented.

2000-09-08  Jeff Freedman  <jeff@patches.simutech.com>

	* Split rendering routines off into 'gamerend.cc'.
	* Added Game_window::get_party().
	* Started writing dungeon-rendering.

2000-09-08  Tristan Tarrant  <nadir@users.sourceforge.net>

	* vgafile.*: Allow empty initialization constructor and implement 
	load() methods for most classes
	* autoarray.h: Implement a set_size() method and an empty constructor
	* gamewin.cc: Moved all file loading/initialization from constructor
	to init_files() method
	* exult.cc: Call init_files() appropriately
	* data/quotes.txt: Make quotes fit
	* audio/Mixer.cc: No need to be so verbose even if DEBUG is set

2000-09-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Schedules:  Duel, kid_games, wander, mine, farm.